[gd_scene load_steps=30 format=2]

[ext_resource path="res://enemies/Dungeon/BigSlime/bigslime.gd" type="Script" id=1]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0002.png" type="Texture" id=2]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0000.png" type="Texture" id=3]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0004.png" type="Texture" id=4]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0006.png" type="Texture" id=5]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0007.png" type="Texture" id=6]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0009.png" type="Texture" id=7]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0010.png" type="Texture" id=8]
[ext_resource path="res://enemies/Dungeon/BigSlime/BigSlimeJump.png" type="Texture" id=9]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0008.png" type="Texture" id=10]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0001.png" type="Texture" id=11]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0003.png" type="Texture" id=12]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0005.png" type="Texture" id=13]
[ext_resource path="res://enemies/Dungeon/BigSlime/BigSlimeIdle.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=28]
radius = 68.8507
height = 1002.3

[sub_resource type="CapsuleShape2D" id=3]
radius = 53.1997
height = 92.9756

[sub_resource type="CapsuleShape2D" id=29]
radius = 77.1465
height = 107.047

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 81.3241, 58.1491 )

[sub_resource type="Animation" id=7]
length = 0.25
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "jump"

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=16]
states/idle/node = SubResource( 24 )
states/idle/position = Vector2( 398, 87 )
states/jump/node = SubResource( 25 )
states/jump/position = Vector2( 594, 84 )
transitions = [ "idle", "jump", SubResource( 26 ), "jump", "idle", SubResource( 27 ) ]
start_node = "idle"
graph_offset = Vector2( -1, -145 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[sub_resource type="Animation" id=18]
length = 0.833333
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=22]
resource_name = "jump"
length = 0.833333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -44.254 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 3, 9 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:canmove")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.833333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CapsuleShape2D" id=23]
radius = 57.5
height = 65.0

[node name="bigslime" type="KinematicBody2D" groups=[
"baddies",
]]
collision_mask = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 16 )
hframes = 3
vframes = 2
frame = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
frames = SubResource( 1 )
frame = 6

[node name="line_of_sight" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false

[node name="circle" type="CollisionShape2D" parent="line_of_sight"]
visible = false
rotation = 1.5708
shape = SubResource( 28 )

[node name="damage_radius" type="Area2D" parent="."]
visible = false
monitoring = false
collision_layer = 32
collision_mask = 48

[node name="circle" type="CollisionShape2D" parent="damage_radius"]
shape = SubResource( 3 )

[node name="hit_box" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
rotation = 1.5708
shape = SubResource( 29 )

[node name="right_target_zone" type="Area2D" parent="."]
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_target_zone"]
position = Vector2( 293.344, 1.39832 )
shape = SubResource( 6 )

[node name="left_target_zone" type="Area2D" parent="."]
scale = Vector2( -1, 1 )
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_target_zone"]
position = Vector2( 293.344, 1.39832 )
shape = SubResource( 6 )

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
anims/took_damage = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 18 )
anims/jump = SubResource( 22 )

[node name="left" type="RayCast2D" parent="."]
position = Vector2( -20, 70 )
cast_to = Vector2( -50, 0 )

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 21, 70 )
cast_to = Vector2( 50, 0 )

[node name="topleft" type="RayCast2D" parent="."]
position = Vector2( -20, -30 )
cast_to = Vector2( -50, 0 )

[node name="topright" type="RayCast2D" parent="."]
position = Vector2( 21, -30 )
cast_to = Vector2( 50, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9.87 )
rotation = 1.5708
shape = SubResource( 23 )

[node name="down" type="RayCast2D" parent="."]
position = Vector2( 0, 56 )
enabled = true

[connection signal="body_entered" from="line_of_sight" to="." method="_on_line_of_sight_body_entered"]
[connection signal="body_exited" from="line_of_sight" to="." method="_on_line_of_sight_body_exited"]
[connection signal="body_entered" from="damage_radius" to="." method="_on_damage_radius_body_entered"]
[connection signal="body_entered" from="right_target_zone" to="." method="_on_right_target_zone_body_entered"]
[connection signal="body_entered" from="left_target_zone" to="." method="_on_left_target_zone_body_entered"]
